reconsile -> success server.go -> api handling success
swagger-ui -> ing

openapiaggregator_controller.go 160 line -> 주석 나중에 풀어야함함
